@@ -171,7 +171,7 @@ class InstanceGenerator:
         createdir(outdir)
 
         # Generate
-        self.permute(os.path.join(outdir, self.basename), self.replacements.keys())
+        self.permute(os.path.join(outdir, os.path.basename(self.basename)), self.replacements.keys())
 
         # Remove the temporary file
         os.remove(self.tmpname)
